<resources>
    <string name="app_name">EPCMSystem</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_code">验证码</string>
    <string name="action_send">发送短信</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="action_to_register">立即注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">手机号码错误，请重新输入</string>
    <string name="error_invalid_password">密码太短，请重新输入</string>
    <string name="error_incorrect_password">密码有误，请重新输入</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_service">Service</string>

    <string name="menu_home">个人中心</string>
    <string name="menu_gallery">风险区域</string>
    <string name="menu_comic">防疫漫画</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_notification">Location</string>
    <string name="title_home">我的</string>
    <string name="title_notification">位置</string>

    <string name="menu_history">打卡记录</string>
    <string name="menu_info">基本信息</string>
    <string name="menu_punch_in">健康打卡</string>
    <string name="menu_settings">设置</string>
    <string name="menu_service">客服</string>

    <string name="area_activity_name">风险区域</string>
    <string name="comic_activity_name">防疫漫画</string>
    <string name="history_activity_name">打卡记录</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="history_degree_name">体温：</string>
    <string name="history_health_name">状态：</string>
    <string name="history_position_name">定位：</string>
    <string name="degree">℃</string>
    <string name="image_description">Hello</string>

    <string name="info_name">姓名 Name</string>
    <string name="info_gender">性别 Gender</string>
    <string name="info_id">证件号码 ID card number</string>
    <string name="info_phone">联系方式 Mobile phone</string>
    <string name="info_email">邮箱地址 Email address</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="prompt_email">Email</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>