<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_slideshow">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.epcmsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/nav_gallery"
        android:name="com.example.epcmsystem.RiskAreaActivity"
        android:label="@string/area_activity_name"
        tools:layout="@layout/activity_risk_area" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.epcmsystem.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>