<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    tools:context=".BasicInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/info_name"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:entries="@array/gender_values"
                android:minHeight="48dp"
                android:spinnerMode="dialog" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_id"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/info_id"
                android:inputType="number"
                android:maxLength="18"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/info_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/info_phone"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:importantForAutofill="no" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_submit"
            android:text="确定" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/info_edit"
            android:visibility="gone"
            android:text="编辑" />
    </LinearLayout>

</LinearLayout>