<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="50dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_gravity="start"
            android:layout_margin="5dp"
            android:textSize="18sp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/degree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:text="@string/history_degree_name"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/degree_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:text="@string/history_health_name"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/health_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="italic"
                        android:layout_gravity="start"
                        android:layout_margin="5dp"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/history_iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:text="@string/history_position_name"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>